# delta-rs-example-writer

./: Cargo.toml  README.md  create_delta.py  main.rs
