[package]
name = "rust_delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltalake = "0.4.0"
tokio = { version = "1", features = ["full"] }
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
